# chatbot_cskh

./: .dockerignore  .env.example  .gitignore  BLUEPRINT-XeCare.md  DEPLOY.md  Dockerfile  README.md
agent/: pyproject.toml
agent/app/: __init__.py  config.py  llm.py  main.py  session.py  trace.py
agent/app/api/: chat.py  registry.py  staff.py
agent/app/cache/: __init__.py  semantic.py
agent/app/graph/: __init__.py  action.py  complaint.py  core.py  emergency.py  escalate.py  retrieval.py
agent/app/guardrails/: __init__.py  emergency_terms.py  injection.py  output.py  pii.py  pipeline.py  pre_gate.py
agent/app/insights/: __init__.py  gap.py
agent/app/memory/: __init__.py
agent/app/tools/: __init__.py  base.py  registry.py
agent/ml/embeddings/: ingest.py
agent/ml/phobert/: README.md  export_onnx.py  infer.py  requirements-infer.txt  requirements-train.txt  train.py
agent/ml/phobert/model/: labels.json
agent/ml/train/: common.py  filter.py  gen_injection.py  generate.py  split.py  stats.py  test_pipeline.py
agent/ml/train/data/: README.md  class_weights.json  injection_test.jsonl  injection_train.jsonl  injection_val.jsonl  intent_clean.jsonl  intent_raw.jsonl  intent_test.jsonl  intent_train.jsonl  intent_val.jsonl  ner_clean.jsonl  ner_raw.jsonl  ner_test.jsonl  ner_train.jsonl  ner_val.jsonl  rejected.jsonl
agent/tests/: conftest.py  test_action.py  test_cache_db.py  test_cache_unit.py  test_complaint.py  test_emergency.py  test_escalate.py  test_graph.py  test_guardrail_in.py  test_guardrail_out.py  test_health.py  test_hitl_db.py  test_persistence_db.py  test_registry_db.py  test_registry_safety.py  test_retrieval.py  test_staff_console_db.py  test_tools_db.py
console/: .env.example  README.MD  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  (+2 more)
docs/: DEPLOY.md  VERIFY.md  VIDEO_SCRIPT.md
evals/: benchmark_router.py  ragas_suite.py  requirements.txt  runner.py  schema.py  scorers.py  test_scorers.py
scripts/: seed_demo.py
supabase/: config.toml
widget/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+78 files in other folders)
